# yolo-to-solov2

./: .gitignore  ARCHITECTURE.md  INFERENCE.md  README.md  __init__.py  example_data.yaml  inference.py  inference_video.py  pyproject.toml  requirements.txt  test_mosaic_visual.py  train.py
configs/: model_configs.py
utils/: config_builder.py  dataset_converter.py  mosaic_transform.py  safe_albu_transform.py  skip_empty_transform.py
