[project]
name = "yolo-to-solov2"
version = "0.1.0"
description = "Train SOLOv2 instance segmentation models using YOLO format datasets"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "openmim>=0.3.9",
    "mmengine>=0.10.0",
    "mmcv>=2.1.0,<2.2.0",
    "mmdet>=3.3.0",
    "pycocotools>=2.0.0",
    "pyyaml>=6.0.0",
    "pillow>=11.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
solov2-train = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
