[project]
name = "yolo-to-instance-segmentation"
version = "1.0.0"
description = "Train SOLOv2 and RTMDet-Ins instance segmentation models with YOLO-format datasets"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "openmim>=0.3.0",
    "mmengine>=0.8.0",
    "mmcv>=2.0.0rc4,<2.2.0",
    "mmdet>=3.0.0",
    "albumentations>=1.3.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
train-solov2 = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = []

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
